[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/scene.gd" type="Script" id=1]
[ext_resource path="res://scenes/GuiLayer.gd" type="Script" id=2]
[ext_resource path="res://gui/GUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://ships/Ship.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/backgrounds/starfield_1.jpg" type="Texture" id=5]
[ext_resource path="res://assets/backgrounds/fog.png" type="Texture" id=6]

[node name="Scene" type="Node2D"]
script = ExtResource( 1 )

[node name="GuiLayer" type="Node2D" parent="."]
position = Vector2( 605.088, -3.05176e-005 )
z_index = 500
script = ExtResource( 2 )

[node name="GUI" parent="GuiLayer" instance=ExtResource( 3 )]
modulate = Color( 1, 1, 1, 0.694118 )
anchor_left = 1.0
anchor_bottom = 0.0
margin_left = 124.366
margin_top = 38.2664
margin_right = 124.366
margin_bottom = 38.2664

[node name="Ship" parent="." instance=ExtResource( 4 )]
position = Vector2( 351.831, 879.612 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
editor/display_folded = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1024, 1024 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 5 )
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1024, 1024 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
self_modulate = Color( 1, 1, 1, 0.168627 )
texture = ExtResource( 6 )
centered = false
[connection signal="fuel" from="Ship" to="." method="_on_Ship_fuel"]
[connection signal="move" from="Ship" to="." method="_on_Ship_move"]
[connection signal="velocity" from="Ship" to="." method="_on_Ship_velocity"]
